fix table overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import "tailwindcss";
 @custom-variant dark (&:where(.dark, .dark *));
-
+.debug {
+  border: 1px solid red;
+}
 @theme {
   /* Light Mode */
   --color-primary-txt: #000;
@@ -21,14 +23,13 @@
   --color-primary-btn-bg-dark: #d39000;
 }
 
-
-.userForm h1{
+.userForm h1 {
   color: var(--color-primary-txt);
   position: relative;
 }
-.userForm h1::before{
+.userForm h1::before {
   background-color: var(--color-primary-btn-bg);
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   position: absolute;
   content: "";
   width: 5px;
@@ -36,31 +37,31 @@
   left: -10px;
   top: 5px;
 }
-.userForm button{
+.userForm button {
   background-color: var(--color-primary-btn-bg);
-  transition: .3s ease-out ;
+  transition: 0.3s ease-out;
   cursor: pointer;
 }
 
-.userForm button:hover{
+.userForm button:hover {
   background-color: var(--color-primary-bg);
   color: var(--color-primary-btn-bg);
 }
 
-.userForm form label{
+.userForm form label {
   color: var(--color-primary-txt);
 }
 
-.userForm form input:not(.img){
+.userForm form input:not(.img) {
   border: 1px solid var(--color-secondary-txt);
-  transition: .3s ease-out;
+  transition: 0.3s ease-out;
 }
-.userForm form input:focus{
+.userForm form input:focus {
   outline-color: var(--color-primary-btn-bg);
   caret-color: var(--color-primary-btn-bg);
 }
 
-.img{
+.img {
   cursor: pointer;
   border: 2px dashed var(--color-primary-btn-bg);
 }
@@ -77,3 +78,7 @@
   border-radius: 0.5rem;
 }
 
+/* product& user modal */
+.modal-details {
+  @apply capitalize space-y-3 [&_span]:mr-2 [&_span]:font-semibold [&_span]:text-black dark:[&_span]:text-white [&_p]:text-secondary-txt;
+}
